--- a/my_project/book/templates/book/book_instance_form.html
+++ b/my_project/book/templates/book/book_instance_form.html
@@ -1,9 +1,83 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Book Instance Form</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Create New Book</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+      }
 
-<form method="post">
-  {% csrf_token %} {{form.as_p}}
-  <input type="submit" value="Sumbit" />
-</form>
+      h1 {
+        text-align: center;
+        color: #333;
+      }
+
+      p {
+        text-align: center;
+        color: #333;
+      }
+
+      form {
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        border-radius: 10px;
+      }
+
+      label {
+        display: block;
+        margin-bottom: 10px;
+        font-weight: bold;
+        color: #666;
+      }
+
+      input[type="text"],
+      select,
+      textarea {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+        color: #555;
+      }
+
+      select option[disabled]:first-child {
+        display: none;
+      }
+
+      button[type="submit"] {
+        background-color: #4CAF50;
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+
+      button[type="submit"]:hover {
+        background-color: #3e8e41;
+      }
+    </style>
+  </head>
+  <body>
+  {% if user.is_authenticated %}
+    <h1>Lend a Book</h1>
+    <form method="post">
+      {% csrf_token %} {{form.as_p}}
+      <button type="submit">Confirm</button>
+    </form>
+  {% else %}
+    <a href="{% url 'login' %}"><p>Log in to see full content</p></a>
+  {% endif %}
+  </body>
+  </html>
 {% endblock %}
